--- a/index.css
+++ b/index.css
@@ -78,7 +78,7 @@ section{
 
 
 #menu-icon{
-    font-size: 3.6rem;
+    font-size: 3rem;
     color: var(--text-color);
     cursor: pointer;
     display: none;
@@ -94,9 +94,13 @@ section{
     width: 35vw;
     margin: 3rem;
     border-radius: 50px;
-    border: .2rem solid var(--second-bg-color);
+    border: .2rem solid var(--main-color);
     padding: 1rem 1rem 1rem 1rem;
-    cursor: pointer;
+    transition: .5s ease;
+
+}
+.home-img img:hover{
+    transform: scale(1.02);
 }
 .home-content h3{
     font-size: 3.2rem;
@@ -168,6 +172,8 @@ section{
     gap: 2rem;
     background: var(--another-color );
     color: var(--main-color);
+    cursor: default; 
+    
 }
 .about-img img{
     width: 35vw;
@@ -194,6 +200,9 @@ section{
 .about-content h2{
     text-align: left;
     line-height: 1.2;
+}
+.about-content.btn{
+    align-items: center;
 }
 
 .about-content h3{
@@ -233,17 +242,21 @@ section{
     width: 50%;
 }
 
+
 .tab-contents ul li{
     list-style: none;
-    font-size: 18px;
+    font-size: 16px;
     margin: 5px 5px;
     justify-content: center;
+    padding: 2px;
+    text-align: center;
+
 
     
 }
 .tab-contents ul li span{
     color: var(--text-color);
-    font-size: 20px;
+    font-size: 15px;
 }
 .tab-contents{
     display: none;
@@ -252,12 +265,79 @@ section{
 .tab-contents.active-tab{
     display: block;
 }
+
+
 /*-------PROJECT-----*/
+
+.project{
+   
+    cursor: default;
+    
+    
+}
+
+.wrapper h1{
+    text-align: center;
+    font-size: 4rem;
+    text-transform: uppercase;
+    margin: 1rem;
+}
+
+.wrapper .carousel{
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+
+}
+
+.carousel .card{
+    justify-content: center;
+    flex: 1 1 30rem;
+    padding: 2rem 2rem 1rem;
+    border-radius: 2rem;
+    text-align: center;
+    border: .2rem solid var(--bg-color);
+    transition: .5s ease;
+}
+
+
+.carousel .card:hover{
+    border-color: var(--text-color);
+    transform: scale(1.02);
+}
+
+
+.card .img img{
+    width: 140px;
+    height: 140px;
+    object-fit: cover;
+    border-radius: 50%;
+    
+}
+.card h2{
+    font-size: 2rem;
+    margin: 1rem;
+    text-transform: uppercase;
+}
+.card span{
+    justify-content: center;
+    color: var(--main-color);
+    font-size: 1.5rem;
+    padding: 1rem;
+    display: flex;
+    text-align: center;
+}
+.card .btn{
+    font-size: 1rem;
+    margin: 1rem;
+}
+
 
 /*-------SKILLS-----*/
 
 .skills{
     background: var(--another-color );
+    cursor: default; 
 }
 
 .skills h2{
@@ -269,13 +349,12 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    gap: 2rem;
+    flex-wrap: wrap-reverse;
+    gap: 4rem;
 }
 
 .skills-container .skills-box{
     flex: 1 1 30rem;
-    background: var(--bg-color);
     padding: 2rem 2rem 1rem;
     border-radius: 2rem;
     text-align: center;
@@ -289,12 +368,14 @@ section{
 }
 
 .skills-box i{
-    font-size: 7rem;
+    font-size: 9rem;
     color: var(--main-color);
     margin-bottom: 1rem;
+    padding: 1rem;
 }
 .skills-box h3{
-    font-size: 2rem;
+    font-size: 3rem;
+    padding: 1rem;
 }
 .skills-box p{
     font-size: 1.5rem;
@@ -306,6 +387,7 @@ section{
 .contact{
     min-height: auto;
     padding-bottom: 7rem;
+    cursor: default; 
 }
 
 .contact form{
@@ -354,6 +436,42 @@ section{
 .contact form .textarea-field textarea{
     resize: none;
 }
+
+
+/*----FOOTER---*/
+
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2rem 9%;
+    background: var(--another-color);
+}
+
+.footer-text p{
+    font-size: 1.5rem;
+}
+
+.footer-iconTop{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: .8rem;
+    background: var(--bg-color);
+    border-radius: .8rem;
+    transition: .5s ease;
+}
+
+.footer-iconTop a:hover{
+    box-shadow: 0 0 1rem var(--bg-color);
+}
+.footer-iconTop a i{
+    font-size: 2.4rem;
+    color: var(--main-color);
+
+}
+
 /*-------RESPONSIVENESS----*/
 @media (max-width: 1200px) {
     html{
@@ -375,41 +493,95 @@ section{
 @media (max-width: 768px) {
     #menu-icon{
         display: block;
+       
     }
     .navbar{
         position: absolute;
         top: 100%;
         left: 0;
         width: 100%;
-        padding: 1rem 3%;
-        background: var(--bg-color);
+        padding: 3rem 3%;
+        background: var(--another-color);
         border-top: .1rem solid rgb(0, 0, 0,.2);
         box-shadow: 0 .5rem 1rem rgb(0, 0, 0,.2);
-        transition: .25s ease;
-        transition-delay: .25s;
+    display: none;
       
     }
 
-    .navbar .active{
-        left: 0;
-        transition-delay: 0;
+    .navbar.active{
+        display: block;
+       
     }
     .navbar a{
         display: block;
         font-size: 2rem;
-        margin: 3rem;
+        margin: 2.5rem;
+     text-align: center;
+    }
+   
+}
+
+@media (max-width: 520px) 
+{
+    html{
+        font-size: 50%;
+    }
+    .header{
+
     }
     .home{
+      
         flex-direction: column;
+     
     }
     .home-content h3{
         font-size: 2.6rem;
     }
     .home-content h1{
+        display: flex;
         font-size: 5rem;
     }
     .home-img img{
-        width: 70vw;
+        width: 60vw;
         margin-top: 4rem;
+      
+    }
+
+    .about{
+        flex-direction: column;
+        text-align: center;
+    }
+    .about h2{
+     
+        text-align: center;
+    }
+    .about-img img{
+    margin-top: auto;
+        width: 60vw;
+    }
+
+}
+
+
+@media (max-width: 462px) {
+    .home-content h1{
+        font-size: 5.2rem;
+    }
+    .contact form .input-box .input-field{
+        width: 100%;
+    }
+    .skills-container{
+        gap: 2rem;
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 365px) {
+    .footer{
+        flex-direction: column-reverse;
+        padding: 1rem;
+    }
+    .tab-contents{
+        font-size: 10px;
     }
 }
