--- a/index.css
+++ b/index.css
@@ -12,12 +12,14 @@
 }
 
 :root{
-    --bg-color: #1560bd;
+    --bg-color: #8e8e8f;
     --second-bg-color: hwb(0 6% 94% / 0.91);
     --text-color: #000000;
     --main-color: #fff;
-    --another-color: #191970;
+    --another-color: #535252;
 }
+
+
 
 
 html{
